@@ -1,6 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.3.0
 
+  *) Support BerkeleyDB 4.6.  [Arfrever Frehtes Taifersar Arahesis]
+
   *) Support Tivoli ITDS LDAP client library.  [Paul Reder]
 
   *) Portably implement testdate's long-time constants to solve
